--- a/src/templates/screens/entry/Wizard2.vm
+++ b/src/templates/screens/entry/Wizard2.vm
@@ -47,7 +47,7 @@ $page.setTitle("Identified as duplicate")
 </table>
 </div>
 
-<div class="datatable">
+<div>
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
 
 <tr>
